--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/index.css"/>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">  
+    </script>
     <title>REPIT</title>
   </head>
   <body>
